# websites_blocker

./: Readme.md  pyproject.toml
websites_blocker/: __main__.py  main_window.py
